<resources>

    <string name="app_name">Carfuelly</string>

    <string name="navi_drawer_open">Navigation öffnen</string>
    <string name="navi_drawer_close">Navigation schließen</string>

    <string-array name="navi_drawer_entries">
        <item>Start</item>
        <item>Autos</item>
        <item>Ausgaben</item>
        <item>Bericht</item>
    </string-array>


    // navigation drawer
    <string name="nav_drawer_list_entry_home">Home</string>
    <string name="nav_drawer_list_entry_cars">Cars</string>
    <string name="nav_drawer_list_entry_fuelings">Fuelings</string>
    <string name="nav_drawer_list_entry_misc">Misc</string>
    <string name="nav_drawer_list_entry_combined">Combined</string>
    <string name="nav_drawer_list_entry_list">List</string>
    <string name="nav_drawer_list_entry_graphs">Graphs</string>
    <string name="nav_drawer_list_entry_stations">Gas Stations</string>
    <string name="nav_drawer_list_entry_types">Gas Types</string>
    <string name="nav_drawer_list_subheader_expenses">Expenses</string>
    <string name="nav_drawer_list_subheader_statistics">Statistics</string>
    <string name="nav_drawer_list_subheader_data">Data</string>

    // car details
    <string name="car_details_hint_name">name</string>
    <string name="car_details_hint_description">description</string>
    <string name="car_details_hint_manufacturer">manufacturer</string>
    <string name="car_details_hint_model">model</string>
    <string name="car_details_hint_first_registration">1st reg.</string>
    <string name="car_details_hint_power">power</string>
    <string name="car_details_hint_capacity">capacity</string>
    <string name="car_details_hint_configuration">configuration line</string>
    <string name="car_details_hint_purchase_date">purchase date</string>
    <string name="car_details_hint_price">price</string>
    <string name="car_details_hint_license_plate">license plate</string>
    <string name="car_details_hint_consumption_urban">urban</string>
    <string name="car_details_hint_consumption_extraurban">extraurban</string>
    <string name="car_details_hint_consumption_combined">combined</string>

</resources>
